<resources>

    <string name="app_name">Earth</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="generate_map">Generate Map</string>
    <string name="hint_map_width">Map Width</string>
    <string name="hint_map_height">Map Height</string>
    <string name="hint_noise_scale">Noise Scale</string>
    <string name="generate_map_title">Map Params</string>
    <string name="ok">OK</string>
    <string name="hint_octaves">Octaves</string>
    <string name="hint_persistence">Persistence</string>
    <string name="hint_lacunarity">Lacunarity</string>
    <string name="hint_seed">Seed</string>
    <string name="hint_offset_x">Offset X</string>
    <string name="hint_offset_y">Offset Y</string>
    <string name="increase_button">+</string>
    <string name="decrease_button">-</string>
    <string name="no_browser_error">Нет приложения, которое могло бы открыть ссылку</string>

    <string name="draw_mode_prompt">Режим отрисовки</string>

    <string-array name="draw_modes">
        <item>Шум</item>
        <item>Цвета</item>
    </string-array>

    <string name="azimuth_degrees">%1$s°</string>

    <string name="enable_camera">Включить дополненную реальность</string>
    <string name="camera_rationale_message">Необходим доступ к камере, чтобы работать в режиме дополненной реальности.</string>
    <string name="goto_settings">Включить камеру в системных настройках</string>

    <string name="magnetic_sensor_calibration_required_title">Необходима калибровка</string>
    <string name="magnetic_sensor_calibration_required_message">Ухудшились показания сенсора магнитного поля, необходимо откалибровать сенсор.</string>
    <string name="magnetic_sensor_calibration_required_how">Как это сделать?</string>

    <string name="camera_permission_status">Доступ к камере: %1$s</string>
    <string name="location_permission_status">Доступ к местоположению: %1$s</string>
    <string name="permission_status_unknown">\???</string>
    <string name="permission_status_granted">Есть</string>
    <string name="permission_status_denied">Нет</string>

</resources>
