<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.compass.CompassActivity">

    <TextView
            android:id="@+id/azimuthView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:fontFamily="@font/roboto_mono_bold"
            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            tools:text="045°"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom|center_horizontal">

        <ImageView
                android:id="@+id/magneticSensorCalibrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                tools:ignore="ContentDescription,RtlHardcoded" />

        <Button
                android:id="@+id/enableCameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/enable_camera" />

        <LinearLayout
                android:id="@+id/gotoPermissionSettingsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/camera_rationale_message" />

            <Button
                    android:id="@+id/gotoPermissionSettingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/goto_settings" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>